更新版本号到0.2.0-alpha.5，修复logback和启动脚本配置，减少stdout噪音